<resources>
    <string name="app_name">Imobil</string>
    <string name="title_home">Home</string>
    <string name="hint_email">Email</string>
    <string name="hint_cnpj">CNPJ</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_Senha">Senha</string>
    <string name="txt_Entrar">Entrar</string>
    <string name="txt_EmpresaEntrar">Sou Imobiliaria</string>
    <string name="txt_ClienteEntrar">Sou Inquilino</string>
    <string name="txt_tela_cadastro">Não tem conta? Cadastre-se</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tela_principal">TelaPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="titulo_anuncio">Titulo</string>
    <string name="endereco_anuncio">enderenco</string>
    <string name="valor_anuncio">R$999</string>

    <string name="pagar">Pagar</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="configuracoes_app">Configurações\n</string>
    <string name="conexoes">Conexões\n</string>
    <string name="formas_de_pagamento">Formas de Pagamentos salvas\n</string>
    <string name="dados_pessoais">dados pessoais\n</string>
    <string name="editar_perfil">editar perfil\n</string>
    <string name="licencas">Licenças</string>
    <string name="anuncios">Anuncios</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
</resources>