<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- res/layout/list_item_anuncio.xml -->
    <LinearLayout
        android:id="@+id/layout_anucios"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="#D3D3D3"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#D3D3D3">

            <TextView
                android:id="@+id/TituloAnuncio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/titulo_anuncio" />

            <TextView
                android:id="@+id/DescricaoDebitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco_anuncio"
                android:padding="5dp" />

            <TextView
                android:id="@+id/valorAnuncio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor_anuncio"
                android:padding="5dp"
                android:textColor="@color/verde" />
        </LinearLayout>

        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:background="#D3D3D3"
            android:backgroundTint="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>