<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"

    >

  <View
      android:id="@+id/containerTop"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_marginTop="4dp"
      android:background="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/icone"
      android:layout_width="200dp"
      android:layout_height="200dp"
      android:src="@mipmap/icon_home"
      app:layout_constraintBottom_toBottomOf="@+id/containerTop"
      app:layout_constraintEnd_toEndOf="@id/containerTop"
      app:layout_constraintStart_toStartOf="@+id/containerTop"
      app:layout_constraintTop_toTopOf="@+id/containerTop"

      />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoutCnpj"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="20dp"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/containerTop"
      app:layout_goneMarginEnd="20dp"
      app:layout_goneMarginStart="20dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editCnpj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cnpj"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoutSenhaimob"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutCnpj"
      app:layout_goneMarginEnd="20dp"
      app:layout_goneMarginStart="20dp"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editSenhaimob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_Senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp" />


  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnEntrarImobiliaria"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/verde"
      android:enabled="false"
      android:padding="15dp"
      app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutSenhaimob"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:text="@string/txt_Entrar" />

  <TextView
      android:id="@+id/txtSouinquilino"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="15dp"
      app:layout_constraintTop_toBottomOf="@+id/btnEntrarImobiliaria"
      android:text="@string/txt_ClienteEntrar"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:textSize="18sp" />


  <TextView
      android:id="@+id/txtTelacadastroimobiliario"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="15dp"
      android:text="@string/txt_tela_cadastro"
      app:layout_constraintTop_toBottomOf="@+id/txtSouinquilino"
      android:textSize="18sp"
      tools:layout_editor_absoluteX="50dp"
      tools:layout_editor_absoluteY="56dp" />

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txtTelacadastroimobiliario" />


</androidx.constraintlayout.widget.ConstraintLayout>